--- a/Projekt_4_Basys3.sim/sim_1/behav/xsim/xsim.dir/tb_STANDARD_TOPLEVEL_behav/webtalk/usage_statistics_ext_xsim.html
+++ b/Projekt_4_Basys3.sim/sim_1/behav/xsim/xsim.dir/tb_STANDARD_TOPLEVEL_behav/webtalk/usage_statistics_ext_xsim.html
@@ -4,11 +4,11 @@
   <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='4'><B>software_version_and_target_device</B></TD></TR>
 <TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>beta</B></TD><TD>FALSE</TD>
   <TD BGCOLOR='#DBE5F1'><B>build_version</B></TD><TD>2708876</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Sat May 23 10:59:50 2020</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Mon May 25 16:16:16 2020</TD>
   <TD BGCOLOR='#DBE5F1'><B>os_platform</B></TD><TD>WIN64</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>product_version</B></TD><TD>XSIM v2019.2 (64-bit)</TD>
   <TD BGCOLOR='#DBE5F1'><B>project_id</B></TD><TD>39a7487a5a984f1c86fb433075c11d3d</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>project_iteration</B></TD><TD>55</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>project_iteration</B></TD><TD>58</TD>
   <TD BGCOLOR='#DBE5F1'><B>random_id</B></TD><TD>7e79804e-c9b5-4499-8fdf-e247331d6c93</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>registration_id</B></TD><TD>7e79804e-c9b5-4499-8fdf-e247331d6c93</TD>
   <TD BGCOLOR='#DBE5F1'><B>route_design</B></TD><TD>FALSE</TD>
@@ -35,27 +35,17 @@
    <TR><TD>
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>command_line_options</B></TD></TR>
-<TR ALIGN='LEFT'>    <TD>command=xelab</TD>
-    <TD>debug=typical</TD>
-    <TD>dpi_used=false</TD>
-    <TD>file_counter=12</TD>
-</TR><TR ALIGN='LEFT'>    <TD>gendll=false</TD>
-    <TD>hwcosim=false</TD>
-    <TD>sdfmodeling=false</TD>
-    <TD>vhdl2008=false</TD>
+<TR ALIGN='LEFT'>    <TD>command=xsim</TD>
 </TR>   </TABLE>
    </TD></TR>
    <TR><TD>
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>usage</B></TD></TR>
-<TR ALIGN='LEFT'>    <TD>compiler_memory=49836_KB</TD>
-    <TD>compiler_time=0.83_sec</TD>
-    <TD>simulation_image_code=99 KB</TD>
-    <TD>simulation_image_data=5 KB</TD>
-</TR><TR ALIGN='LEFT'>    <TD>total_instances=14</TD>
-    <TD>total_nets=0</TD>
-    <TD>total_processes=50</TD>
-    <TD>xilinx_hdl_libraries_used=secureip </TD>
+<TR ALIGN='LEFT'>    <TD>iteration=0</TD>
+    <TD>runtime=200 us</TD>
+    <TD>simulation_memory=10240_KB</TD>
+    <TD>simulation_time=0.17_sec</TD>
+</TR><TR ALIGN='LEFT'>    <TD>trace_waveform=true</TD>
 </TR>   </TABLE>
    </TD></TR>
   </TABLE><BR>
