--- a/Projekt_4_Basys3.runs/impl_1/usage_statistics_webtalk.html
+++ b/Projekt_4_Basys3.runs/impl_1/usage_statistics_webtalk.html
@@ -4,11 +4,11 @@
   <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='4'><B>software_version_and_target_device</B></TD></TR>
 <TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>beta</B></TD><TD>FALSE</TD>
   <TD BGCOLOR='#DBE5F1'><B>build_version</B></TD><TD>2708876</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Mon May 25 15:11:52 2020</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Mon May 25 16:54:48 2020</TD>
   <TD BGCOLOR='#DBE5F1'><B>os_platform</B></TD><TD>WIN64</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>product_version</B></TD><TD>Vivado v2019.2 (64-bit)</TD>
   <TD BGCOLOR='#DBE5F1'><B>project_id</B></TD><TD>39a7487a5a984f1c86fb433075c11d3d</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>project_iteration</B></TD><TD>12</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>project_iteration</B></TD><TD>13</TD>
   <TD BGCOLOR='#DBE5F1'><B>random_id</B></TD><TD>d75b1d1db21e574fb0c593c397591cc2</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>registration_id</B></TD><TD>d75b1d1db21e574fb0c593c397591cc2</TD>
   <TD BGCOLOR='#DBE5F1'><B>route_design</B></TD><TD>TRUE</TD>
@@ -35,17 +35,17 @@
    <TD>addsrcwizard_specify_simulation_specific_hdl_files=3</TD>
    <TD>basedialog_apply=21</TD>
    <TD>basedialog_cancel=14</TD>
-</TR><TR ALIGN='LEFT'>   <TD>basedialog_ok=195</TD>
-   <TD>basedialog_yes=29</TD>
+</TR><TR ALIGN='LEFT'>   <TD>basedialog_ok=197</TD>
+   <TD>basedialog_yes=30</TD>
    <TD>cmdmsgdialog_ok=20</TD>
    <TD>confirmsavetexteditsdialog_cancel=1</TD>
 </TR><TR ALIGN='LEFT'>   <TD>constraintschooserpanel_add_files=2</TD>
    <TD>createsrcfiledialog_file_name=16</TD>
    <TD>defaultoptionpane_close=2</TD>
    <TD>definemodulesdialog_define_modules_and_specify_io_ports=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>filesetpanel_file_set_panel_tree=831</TD>
+</TR><TR ALIGN='LEFT'>   <TD>filesetpanel_file_set_panel_tree=834</TD>
    <TD>floatingtopdialog_ignore_and_continue_with_invalid_top=1</TD>
-   <TD>flownavigatortreepanel_flow_navigator_tree=281</TD>
+   <TD>flownavigatortreepanel_flow_navigator_tree=282</TD>
    <TD>fpgachooser_family=2</TD>
 </TR><TR ALIGN='LEFT'>   <TD>fpgachooser_fpga_table=2</TD>
    <TD>fpgachooser_package=2</TD>
@@ -85,7 +85,7 @@
    <TD>pacommandnames_new_project=1</TD>
 </TR><TR ALIGN='LEFT'>   <TD>pacommandnames_open_hardware_manager=1</TD>
    <TD>pacommandnames_open_project=1</TD>
-   <TD>pacommandnames_reports_window=7</TD>
+   <TD>pacommandnames_reports_window=8</TD>
    <TD>pacommandnames_schematic=1</TD>
 </TR><TR ALIGN='LEFT'>   <TD>pacommandnames_select_area=1</TD>
    <TD>pacommandnames_set_as_top=26</TD>
@@ -126,7 +126,7 @@
 </TR><TR ALIGN='LEFT'>   <TD>srcchooserpanel_target_language=2</TD>
    <TD>srcmenu_ip_hierarchy=53</TD>
    <TD>srcmenu_set_file_type=1</TD>
-   <TD>syntheticagettingstartedview_recent_projects=30</TD>
+   <TD>syntheticagettingstartedview_recent_projects=31</TD>
 </TR><TR ALIGN='LEFT'>   <TD>syntheticastatemonitor_cancel=3</TD>
    <TD>taskbanner_close=90</TD>
    <TD>tclconsoleview_tcl_console_code_editor=1</TD>
@@ -155,13 +155,13 @@
    <TD>newproject=3</TD>
 </TR><TR ALIGN='LEFT'>   <TD>openproject=5</TD>
    <TD>resetlayout=8</TD>
-   <TD>runbitgen=30</TD>
+   <TD>runbitgen=31</TD>
    <TD>runschematic=1</TD>
 </TR><TR ALIGN='LEFT'>   <TD>runsynthesis=1</TD>
    <TD>savefileproxyhandler=17</TD>
    <TD>setsourceenabled=1</TD>
    <TD>settopnode=26</TD>
-</TR><TR ALIGN='LEFT'>   <TD>showview=25</TD>
+</TR><TR ALIGN='LEFT'>   <TD>showview=26</TD>
    <TD>simulationrun=229</TD>
    <TD>toggleselectareamode=1</TD>
    <TD>toggleviewnavigator=9</TD>
@@ -173,7 +173,7 @@
 </TR>  </TABLE>
 </TR><TR ALIGN='LEFT'>  <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>other_data</B></TD></TR>
-<TR ALIGN='LEFT'>   <TD>guimode=34</TD>
+<TR ALIGN='LEFT'>   <TD>guimode=35</TD>
 </TR>  </TABLE>
   <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>project_data</B></TD></TR>
@@ -215,17 +215,16 @@
 <TR ALIGN='LEFT'>    <TD>bufg=4</TD>
     <TD>carry4=8</TD>
     <TD>fdpe=4</TD>
-    <TD>fdre=48</TD>
+    <TD>fdre=32</TD>
 </TR><TR ALIGN='LEFT'>    <TD>gnd=4</TD>
-    <TD>ibuf=17</TD>
+    <TD>ibuf=16</TD>
     <TD>ldce=20</TD>
     <TD>lut1=4</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut2=18</TD>
     <TD>lut3=8</TD>
     <TD>lut4=46</TD>
-    <TD>lut5=8</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lut6=19</TD>
-    <TD>obuf=6</TD>
+    <TD>lut6=19</TD>
+</TR><TR ALIGN='LEFT'>    <TD>obuf=6</TD>
     <TD>obuft=1</TD>
     <TD>vcc=4</TD>
 </TR>   </TABLE>
@@ -236,17 +235,16 @@
 <TR ALIGN='LEFT'>    <TD>bufg=4</TD>
     <TD>carry4=8</TD>
     <TD>fdpe=4</TD>
-    <TD>fdre=48</TD>
+    <TD>fdre=32</TD>
 </TR><TR ALIGN='LEFT'>    <TD>gnd=4</TD>
-    <TD>ibuf=17</TD>
+    <TD>ibuf=16</TD>
     <TD>ldce=20</TD>
     <TD>lut1=4</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut2=18</TD>
     <TD>lut3=8</TD>
     <TD>lut4=46</TD>
-    <TD>lut5=8</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lut6=19</TD>
-    <TD>obuf=6</TD>
+    <TD>lut6=19</TD>
+</TR><TR ALIGN='LEFT'>    <TD>obuf=6</TD>
     <TD>obuft=1</TD>
     <TD>vcc=4</TD>
 </TR>   </TABLE>
@@ -329,7 +327,7 @@
    <TR><TD>
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>results</B></TD></TR>
-<TR ALIGN='LEFT'>    <TD>timing-17=24</TD>
+<TR ALIGN='LEFT'>    <TD>timing-17=8</TD>
     <TD>timing-18=4</TD>
     <TD>timing-20=20</TD>
 </TR>   </TABLE>
@@ -365,7 +363,7 @@
     <TD>bidir_output_enable=1.000000</TD>
 </TR><TR ALIGN='LEFT'>    <TD>board_layers=12to15 (12 to 15 Layers)</TD>
     <TD>board_selection=medium (10&quot;x10&quot;)</TD>
-    <TD>clocks=0.000933</TD>
+    <TD>clocks=0.000606</TD>
     <TD>confidence_level_clock_activity=Low</TD>
 </TR><TR ALIGN='LEFT'>    <TD>confidence_level_design_state=High</TD>
     <TD>confidence_level_device_models=High</TD>
@@ -377,17 +375,17 @@
     <TD>devstatic=0.071707</TD>
 </TR><TR ALIGN='LEFT'>    <TD>die=xc7a35tcpg236-1</TD>
     <TD>dsp_output_toggle=12.500000</TD>
-    <TD>dynamic=0.002831</TD>
+    <TD>dynamic=0.002885</TD>
     <TD>effective_thetaja=5.0</TD>
 </TR><TR ALIGN='LEFT'>    <TD>enable_probability=0.990000</TD>
     <TD>family=artix7</TD>
     <TD>ff_toggle=12.500000</TD>
     <TD>flow_state=routed</TD>
 </TR><TR ALIGN='LEFT'>    <TD>heatsink=medium (Medium Profile)</TD>
-    <TD>i/o=0.001248</TD>
+    <TD>i/o=0.001639</TD>
     <TD>input_toggle=12.500000</TD>
     <TD>junction_temp=25.4 (C)</TD>
-</TR><TR ALIGN='LEFT'>    <TD>logic=0.000330</TD>
+</TR><TR ALIGN='LEFT'>    <TD>logic=0.000324</TD>
     <TD>mgtavcc_dynamic_current=0.000000</TD>
     <TD>mgtavcc_static_current=0.000000</TD>
     <TD>mgtavcc_total_current=0.000000</TD>
@@ -398,13 +396,13 @@
 </TR><TR ALIGN='LEFT'>    <TD>mgtavtt_voltage=1.200000</TD>
     <TD>netlist_net_matched=NA</TD>
     <TD>off-chip_power=0.000000</TD>
-    <TD>on-chip_power=0.074538</TD>
+    <TD>on-chip_power=0.074592</TD>
 </TR><TR ALIGN='LEFT'>    <TD>output_enable=1.000000</TD>
     <TD>output_load=5.000000</TD>
     <TD>output_toggle=12.500000</TD>
     <TD>package=cpg236</TD>
 </TR><TR ALIGN='LEFT'>    <TD>pct_clock_constrained=1.000000</TD>
-    <TD>pct_inputs_defined=5</TD>
+    <TD>pct_inputs_defined=6</TD>
     <TD>platform=nt64</TD>
     <TD>process=typical</TD>
 </TR><TR ALIGN='LEFT'>    <TD>ram_enable=50.000000</TD>
@@ -412,7 +410,7 @@
     <TD>read_saif=False</TD>
     <TD>set/reset_probability=0.000000</TD>
 </TR><TR ALIGN='LEFT'>    <TD>signal_rate=False</TD>
-    <TD>signals=0.000320</TD>
+    <TD>signals=0.000316</TD>
     <TD>simulation_file=None</TD>
     <TD>speedgrade=-1</TD>
 </TR><TR ALIGN='LEFT'>    <TD>static_prob=False</TD>
@@ -429,21 +427,21 @@
     <TD>vccadc_static_current=0.020000</TD>
 </TR><TR ALIGN='LEFT'>    <TD>vccadc_total_current=0.020000</TD>
     <TD>vccadc_voltage=1.800000</TD>
-    <TD>vccaux_dynamic_current=0.000041</TD>
+    <TD>vccaux_dynamic_current=0.000056</TD>
     <TD>vccaux_io_dynamic_current=0.000000</TD>
 </TR><TR ALIGN='LEFT'>    <TD>vccaux_io_static_current=0.000000</TD>
     <TD>vccaux_io_total_current=0.000000</TD>
     <TD>vccaux_io_voltage=1.800000</TD>
     <TD>vccaux_static_current=0.012615</TD>
-</TR><TR ALIGN='LEFT'>    <TD>vccaux_total_current=0.012656</TD>
+</TR><TR ALIGN='LEFT'>    <TD>vccaux_total_current=0.012671</TD>
     <TD>vccaux_voltage=1.800000</TD>
     <TD>vccbram_dynamic_current=0.000000</TD>
     <TD>vccbram_static_current=0.000161</TD>
 </TR><TR ALIGN='LEFT'>    <TD>vccbram_total_current=0.000161</TD>
     <TD>vccbram_voltage=1.000000</TD>
-    <TD>vccint_dynamic_current=0.001707</TD>
-    <TD>vccint_static_current=0.009538</TD>
-</TR><TR ALIGN='LEFT'>    <TD>vccint_total_current=0.011246</TD>
+    <TD>vccint_dynamic_current=0.001366</TD>
+    <TD>vccint_static_current=0.009539</TD>
+</TR><TR ALIGN='LEFT'>    <TD>vccint_total_current=0.010904</TD>
     <TD>vccint_voltage=1.000000</TD>
     <TD>vcco12_dynamic_current=0.000000</TD>
     <TD>vcco12_static_current=0.000000</TD>
@@ -465,9 +463,9 @@
     <TD>vcco25_static_current=0.000000</TD>
 </TR><TR ALIGN='LEFT'>    <TD>vcco25_total_current=0.000000</TD>
     <TD>vcco25_voltage=2.500000</TD>
-    <TD>vcco33_dynamic_current=0.000318</TD>
+    <TD>vcco33_dynamic_current=0.000430</TD>
     <TD>vcco33_static_current=0.001000</TD>
-</TR><TR ALIGN='LEFT'>    <TD>vcco33_total_current=0.001318</TD>
+</TR><TR ALIGN='LEFT'>    <TD>vcco33_total_current=0.001430</TD>
     <TD>vcco33_voltage=3.300000</TD>
     <TD>version=2019.2</TD>
 </TR>   </TABLE>
@@ -586,9 +584,9 @@
 </TR><TR ALIGN='LEFT'>    <TD>fdpe_functional_category=Flop &amp; Latch</TD>
     <TD>fdpe_used=4</TD>
     <TD>fdre_functional_category=Flop &amp; Latch</TD>
-    <TD>fdre_used=48</TD>
+    <TD>fdre_used=32</TD>
 </TR><TR ALIGN='LEFT'>    <TD>ibuf_functional_category=IO</TD>
-    <TD>ibuf_used=17</TD>
+    <TD>ibuf_used=16</TD>
     <TD>ldce_functional_category=Flop &amp; Latch</TD>
     <TD>ldce_used=20</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut1_functional_category=LUT</TD>
@@ -599,13 +597,11 @@
     <TD>lut3_used=8</TD>
     <TD>lut4_functional_category=LUT</TD>
     <TD>lut4_used=46</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lut5_functional_category=LUT</TD>
-    <TD>lut5_used=8</TD>
-    <TD>lut6_functional_category=LUT</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut6_functional_category=LUT</TD>
     <TD>lut6_used=19</TD>
-</TR><TR ALIGN='LEFT'>    <TD>obuf_functional_category=IO</TD>
+    <TD>obuf_functional_category=IO</TD>
     <TD>obuf_used=6</TD>
-    <TD>obuft_functional_category=IO</TD>
+</TR><TR ALIGN='LEFT'>    <TD>obuft_functional_category=IO</TD>
     <TD>obuft_used=1</TD>
 </TR>   </TABLE>
    </TD></TR>
@@ -622,34 +618,34 @@
     <TD>f8_muxes_util_percentage=0.00</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut_as_logic_available=20800</TD>
     <TD>lut_as_logic_fixed=0</TD>
-    <TD>lut_as_logic_used=73</TD>
-    <TD>lut_as_logic_util_percentage=0.35</TD>
+    <TD>lut_as_logic_used=69</TD>
+    <TD>lut_as_logic_util_percentage=0.33</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut_as_memory_available=9600</TD>
     <TD>lut_as_memory_fixed=0</TD>
     <TD>lut_as_memory_used=0</TD>
     <TD>lut_as_memory_util_percentage=0.00</TD>
 </TR><TR ALIGN='LEFT'>    <TD>register_as_flip_flop_available=41600</TD>
     <TD>register_as_flip_flop_fixed=0</TD>
-    <TD>register_as_flip_flop_used=52</TD>
-    <TD>register_as_flip_flop_util_percentage=0.13</TD>
+    <TD>register_as_flip_flop_used=36</TD>
+    <TD>register_as_flip_flop_util_percentage=0.09</TD>
 </TR><TR ALIGN='LEFT'>    <TD>register_as_latch_available=41600</TD>
     <TD>register_as_latch_fixed=0</TD>
     <TD>register_as_latch_used=20</TD>
     <TD>register_as_latch_util_percentage=0.05</TD>
 </TR><TR ALIGN='LEFT'>    <TD>slice_luts_available=20800</TD>
     <TD>slice_luts_fixed=0</TD>
-    <TD>slice_luts_used=73</TD>
-    <TD>slice_luts_util_percentage=0.35</TD>
+    <TD>slice_luts_used=69</TD>
+    <TD>slice_luts_util_percentage=0.33</TD>
 </TR><TR ALIGN='LEFT'>    <TD>slice_registers_available=41600</TD>
     <TD>slice_registers_fixed=0</TD>
-    <TD>slice_registers_used=72</TD>
-    <TD>slice_registers_util_percentage=0.17</TD>
+    <TD>slice_registers_used=56</TD>
+    <TD>slice_registers_util_percentage=0.13</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut_as_distributed_ram_fixed=0</TD>
     <TD>lut_as_distributed_ram_used=0</TD>
     <TD>lut_as_logic_available=20800</TD>
     <TD>lut_as_logic_fixed=0</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lut_as_logic_used=73</TD>
-    <TD>lut_as_logic_util_percentage=0.35</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut_as_logic_used=69</TD>
+    <TD>lut_as_logic_util_percentage=0.33</TD>
     <TD>lut_as_memory_available=9600</TD>
     <TD>lut_as_memory_fixed=0</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut_as_memory_used=0</TD>
@@ -657,32 +653,32 @@
     <TD>lut_as_shift_register_fixed=0</TD>
     <TD>lut_as_shift_register_used=0</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut_in_front_of_the_register_is_unused_fixed=0</TD>
-    <TD>lut_in_front_of_the_register_is_unused_used=33</TD>
-    <TD>lut_in_front_of_the_register_is_used_fixed=33</TD>
-    <TD>lut_in_front_of_the_register_is_used_used=8</TD>
-</TR><TR ALIGN='LEFT'>    <TD>register_driven_from_outside_the_slice_fixed=8</TD>
-    <TD>register_driven_from_outside_the_slice_used=41</TD>
-    <TD>register_driven_from_within_the_slice_fixed=41</TD>
-    <TD>register_driven_from_within_the_slice_used=31</TD>
+    <TD>lut_in_front_of_the_register_is_unused_used=18</TD>
+    <TD>lut_in_front_of_the_register_is_used_fixed=18</TD>
+    <TD>lut_in_front_of_the_register_is_used_used=6</TD>
+</TR><TR ALIGN='LEFT'>    <TD>register_driven_from_outside_the_slice_fixed=6</TD>
+    <TD>register_driven_from_outside_the_slice_used=24</TD>
+    <TD>register_driven_from_within_the_slice_fixed=24</TD>
+    <TD>register_driven_from_within_the_slice_used=32</TD>
 </TR><TR ALIGN='LEFT'>    <TD>slice_available=8150</TD>
     <TD>slice_fixed=0</TD>
     <TD>slice_registers_available=41600</TD>
     <TD>slice_registers_fixed=0</TD>
-</TR><TR ALIGN='LEFT'>    <TD>slice_registers_used=72</TD>
-    <TD>slice_registers_util_percentage=0.17</TD>
-    <TD>slice_used=45</TD>
-    <TD>slice_util_percentage=0.55</TD>
+</TR><TR ALIGN='LEFT'>    <TD>slice_registers_used=56</TD>
+    <TD>slice_registers_util_percentage=0.13</TD>
+    <TD>slice_used=33</TD>
+    <TD>slice_util_percentage=0.40</TD>
 </TR><TR ALIGN='LEFT'>    <TD>slicel_fixed=0</TD>
-    <TD>slicel_used=34</TD>
+    <TD>slicel_used=25</TD>
     <TD>slicem_fixed=0</TD>
-    <TD>slicem_used=11</TD>
+    <TD>slicem_used=8</TD>
 </TR><TR ALIGN='LEFT'>    <TD>unique_control_sets_available=8150</TD>
     <TD>unique_control_sets_fixed=8150</TD>
-    <TD>unique_control_sets_used=18</TD>
-    <TD>unique_control_sets_util_percentage=0.22</TD>
-</TR><TR ALIGN='LEFT'>    <TD>using_o5_and_o6_fixed=0.22</TD>
-    <TD>using_o5_and_o6_used=30</TD>
-    <TD>using_o5_output_only_fixed=30</TD>
+    <TD>unique_control_sets_used=9</TD>
+    <TD>unique_control_sets_util_percentage=0.11</TD>
+</TR><TR ALIGN='LEFT'>    <TD>using_o5_and_o6_fixed=0.11</TD>
+    <TD>using_o5_and_o6_used=26</TD>
+    <TD>using_o5_output_only_fixed=26</TD>
     <TD>using_o5_output_only_used=0</TD>
 </TR><TR ALIGN='LEFT'>    <TD>using_o6_output_only_fixed=0</TD>
     <TD>using_o6_output_only_used=43</TD>
@@ -774,10 +770,10 @@
    <TR><TD>
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>usage</B></TD></TR>
-<TR ALIGN='LEFT'>    <TD>elapsed=00:00:56s</TD>
+<TR ALIGN='LEFT'>    <TD>elapsed=00:00:48s</TD>
     <TD>hls_ip=0</TD>
-    <TD>memory_gain=681.707MB</TD>
-    <TD>memory_peak=1012.305MB</TD>
+    <TD>memory_gain=683.828MB</TD>
+    <TD>memory_peak=1014.055MB</TD>
 </TR>   </TABLE>
    </TD></TR>
   </TABLE><BR>
