--- a/Projekt_4_Basys3.runs/impl_1/usage_statistics_webtalk.html
+++ b/Projekt_4_Basys3.runs/impl_1/usage_statistics_webtalk.html
@@ -4,11 +4,11 @@
   <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='4'><B>software_version_and_target_device</B></TD></TR>
 <TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>beta</B></TD><TD>FALSE</TD>
   <TD BGCOLOR='#DBE5F1'><B>build_version</B></TD><TD>2708876</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Mon May 25 16:54:48 2020</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Tue May 26 13:12:17 2020</TD>
   <TD BGCOLOR='#DBE5F1'><B>os_platform</B></TD><TD>WIN64</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>product_version</B></TD><TD>Vivado v2019.2 (64-bit)</TD>
   <TD BGCOLOR='#DBE5F1'><B>project_id</B></TD><TD>39a7487a5a984f1c86fb433075c11d3d</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>project_iteration</B></TD><TD>13</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>project_iteration</B></TD><TD>18</TD>
   <TD BGCOLOR='#DBE5F1'><B>random_id</B></TD><TD>d75b1d1db21e574fb0c593c397591cc2</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>registration_id</B></TD><TD>d75b1d1db21e574fb0c593c397591cc2</TD>
   <TD BGCOLOR='#DBE5F1'><B>route_design</B></TD><TD>TRUE</TD>
@@ -35,17 +35,17 @@
    <TD>addsrcwizard_specify_simulation_specific_hdl_files=3</TD>
    <TD>basedialog_apply=21</TD>
    <TD>basedialog_cancel=14</TD>
-</TR><TR ALIGN='LEFT'>   <TD>basedialog_ok=197</TD>
-   <TD>basedialog_yes=30</TD>
-   <TD>cmdmsgdialog_ok=20</TD>
+</TR><TR ALIGN='LEFT'>   <TD>basedialog_ok=211</TD>
+   <TD>basedialog_yes=37</TD>
+   <TD>cmdmsgdialog_ok=22</TD>
    <TD>confirmsavetexteditsdialog_cancel=1</TD>
 </TR><TR ALIGN='LEFT'>   <TD>constraintschooserpanel_add_files=2</TD>
    <TD>createsrcfiledialog_file_name=16</TD>
    <TD>defaultoptionpane_close=2</TD>
    <TD>definemodulesdialog_define_modules_and_specify_io_ports=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>filesetpanel_file_set_panel_tree=834</TD>
+</TR><TR ALIGN='LEFT'>   <TD>filesetpanel_file_set_panel_tree=848</TD>
    <TD>floatingtopdialog_ignore_and_continue_with_invalid_top=1</TD>
-   <TD>flownavigatortreepanel_flow_navigator_tree=282</TD>
+   <TD>flownavigatortreepanel_flow_navigator_tree=297</TD>
    <TD>fpgachooser_family=2</TD>
 </TR><TR ALIGN='LEFT'>   <TD>fpgachooser_fpga_table=2</TD>
    <TD>fpgachooser_package=2</TD>
@@ -68,10 +68,10 @@
    <TD>mainmenumgr_window=4</TD>
    <TD>maintoolbarmgr_open=2</TD>
 </TR><TR ALIGN='LEFT'>   <TD>maintoolbarmgr_run=1</TD>
-   <TD>msgtreepanel_message_severity=3</TD>
-   <TD>msgtreepanel_message_view_tree=75</TD>
+   <TD>msgtreepanel_message_severity=5</TD>
+   <TD>msgtreepanel_message_view_tree=81</TD>
    <TD>msgview_clear_messages_resulting_from_user_executed=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>msgview_critical_warnings=6</TD>
+</TR><TR ALIGN='LEFT'>   <TD>msgview_critical_warnings=7</TD>
    <TD>msgview_information_messages=2</TD>
    <TD>msgview_warning_messages=3</TD>
    <TD>netlistschematicview_show_cells_in_this_schematic=1</TD>
@@ -79,101 +79,114 @@
    <TD>openfileaction_cancel=1</TD>
    <TD>openfileaction_open_directory=1</TD>
    <TD>pacommandnames_add_sources=13</TD>
-</TR><TR ALIGN='LEFT'>   <TD>pacommandnames_auto_update_hier=56</TD>
+</TR><TR ALIGN='LEFT'>   <TD>pacommandnames_auto_connect_target=1</TD>
+   <TD>pacommandnames_auto_update_hier=56</TD>
    <TD>pacommandnames_edit_constraint_sets=1</TD>
    <TD>pacommandnames_edit_simulation_sets=1</TD>
-   <TD>pacommandnames_new_project=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>pacommandnames_open_hardware_manager=1</TD>
+</TR><TR ALIGN='LEFT'>   <TD>pacommandnames_new_project=1</TD>
+   <TD>pacommandnames_open_hardware_manager=2</TD>
    <TD>pacommandnames_open_project=1</TD>
-   <TD>pacommandnames_reports_window=8</TD>
-   <TD>pacommandnames_schematic=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>pacommandnames_select_area=1</TD>
+   <TD>pacommandnames_reports_window=9</TD>
+</TR><TR ALIGN='LEFT'>   <TD>pacommandnames_schematic=1</TD>
+   <TD>pacommandnames_select_area=1</TD>
    <TD>pacommandnames_set_as_top=26</TD>
    <TD>pacommandnames_set_used_in_prop=1</TD>
-   <TD>pacommandnames_simulation_reset=2</TD>
-</TR><TR ALIGN='LEFT'>   <TD>pacommandnames_simulation_run=3</TD>
-   <TD>pacommandnames_simulation_run_behavioral=234</TD>
+</TR><TR ALIGN='LEFT'>   <TD>pacommandnames_simulation_reset=2</TD>
+   <TD>pacommandnames_simulation_run=3</TD>
+   <TD>pacommandnames_simulation_run_behavioral=235</TD>
    <TD>pacommandnames_simulation_run_post_implementation_functional=1</TD>
-   <TD>pacommandnames_toggle_view_nav=9</TD>
-</TR><TR ALIGN='LEFT'>   <TD>pacommandnames_zoom_fit=2</TD>
+</TR><TR ALIGN='LEFT'>   <TD>pacommandnames_toggle_view_nav=9</TD>
+   <TD>pacommandnames_zoom_fit=2</TD>
    <TD>pacommandnames_zoom_in=1</TD>
    <TD>paviews_code=110</TD>
-   <TD>paviews_device=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>paviews_project_summary=204</TD>
+</TR><TR ALIGN='LEFT'>   <TD>paviews_device=1</TD>
+   <TD>paviews_project_summary=206</TD>
    <TD>paviews_schematic=3</TD>
    <TD>planaheadtab_show_flow_navigator=8</TD>
-   <TD>progressdialog_cancel=3</TD>
-</TR><TR ALIGN='LEFT'>   <TD>projectnamechooser_project_name=2</TD>
+</TR><TR ALIGN='LEFT'>   <TD>programdebugtab_open_target=1</TD>
+   <TD>programdebugtab_program_device=10</TD>
+   <TD>programdebugtab_refresh_device=1</TD>
+   <TD>programfpgadialog_program=10</TD>
+</TR><TR ALIGN='LEFT'>   <TD>progressdialog_cancel=3</TD>
+   <TD>projectnamechooser_project_name=2</TD>
    <TD>projectsettingssimulationpanel_tabbed_pane=17</TD>
    <TD>rdicommands_delete=6</TD>
-   <TD>rdicommands_properties=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>rdicommands_settings=21</TD>
+</TR><TR ALIGN='LEFT'>   <TD>rdicommands_properties=1</TD>
+   <TD>rdicommands_settings=21</TD>
    <TD>rdicommands_waveform_save_configuration=3</TD>
    <TD>rdiviews_waveform_viewer=1379</TD>
-   <TD>removesourcesdialog_also_delete=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>saveprojectutils_save=3</TD>
+</TR><TR ALIGN='LEFT'>   <TD>removesourcesdialog_also_delete=1</TD>
+   <TD>saveprojectutils_save=3</TD>
    <TD>schematicview_next=1</TD>
    <TD>schematicview_previous=1</TD>
-   <TD>selectmenu_highlight=2</TD>
-</TR><TR ALIGN='LEFT'>   <TD>selectmenu_mark=2</TD>
+</TR><TR ALIGN='LEFT'>   <TD>selectmenu_highlight=2</TD>
+   <TD>selectmenu_mark=2</TD>
    <TD>settingsdialog_project_tree=10</TD>
    <TD>simulationobjectspanel_simulation_objects_tree_table=85</TD>
-   <TD>simulationscopespanel_simulate_scope_table=52</TD>
-</TR><TR ALIGN='LEFT'>   <TD>srcchooserpanel_add_hdl_and_netlist_files_to_your_project=6</TD>
+</TR><TR ALIGN='LEFT'>   <TD>simulationscopespanel_simulate_scope_table=52</TD>
+   <TD>srcchooserpanel_add_hdl_and_netlist_files_to_your_project=6</TD>
    <TD>srcchooserpanel_create_file=12</TD>
    <TD>srcchooserpanel_make_local_copy_of_these_files_into=2</TD>
-   <TD>srcchooserpanel_simulator_language=2</TD>
-</TR><TR ALIGN='LEFT'>   <TD>srcchooserpanel_target_language=2</TD>
+</TR><TR ALIGN='LEFT'>   <TD>srcchooserpanel_simulator_language=2</TD>
+   <TD>srcchooserpanel_target_language=2</TD>
    <TD>srcmenu_ip_hierarchy=53</TD>
    <TD>srcmenu_set_file_type=1</TD>
-   <TD>syntheticagettingstartedview_recent_projects=31</TD>
-</TR><TR ALIGN='LEFT'>   <TD>syntheticastatemonitor_cancel=3</TD>
-   <TD>taskbanner_close=90</TD>
+</TR><TR ALIGN='LEFT'>   <TD>syntheticagettingstartedview_recent_projects=33</TD>
+   <TD>syntheticastatemonitor_cancel=3</TD>
+   <TD>taskbanner_close=91</TD>
    <TD>tclconsoleview_tcl_console_code_editor=1</TD>
+</TR><TR ALIGN='LEFT'>   <TD>touchpointsurveydialog_no=1</TD>
    <TD>waveformfindbar_close=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>waveformfindbar_radix=1</TD>
+   <TD>waveformfindbar_radix=1</TD>
    <TD>waveformnametree_waveform_name_tree=442</TD>
-   <TD>waveformoptionsview_draw_waveform_shadow=2</TD>
+</TR><TR ALIGN='LEFT'>   <TD>waveformoptionsview_draw_waveform_shadow=2</TD>
    <TD>waveformoptionsview_radix=2</TD>
-</TR><TR ALIGN='LEFT'>   <TD>waveformoptionsview_show_grid_lines=4</TD>
+   <TD>waveformoptionsview_show_grid_lines=4</TD>
    <TD>waveformview_add_marker=5</TD>
-   <TD>waveformview_goto_last_time=3</TD>
+</TR><TR ALIGN='LEFT'>   <TD>waveformview_goto_last_time=3</TD>
    <TD>waveformview_goto_time_0=96</TD>
-</TR><TR ALIGN='LEFT'>   <TD>waveformview_next_marker=3</TD>
+   <TD>waveformview_next_marker=3</TD>
    <TD>waveformview_next_transition=2</TD>
-   <TD>waveformview_previous_marker=4</TD>
+</TR><TR ALIGN='LEFT'>   <TD>waveformview_previous_marker=4</TD>
 </TR>  </TABLE>
   <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>java_command_handlers</B></TD></TR>
 <TR ALIGN='LEFT'>   <TD>addsources=14</TD>
+   <TD>autoconnecttarget=1</TD>
    <TD>closeproject=1</TD>
    <TD>editconstraintsets=1</TD>
-   <TD>editdelete=6</TD>
-</TR><TR ALIGN='LEFT'>   <TD>editproperties=1</TD>
+</TR><TR ALIGN='LEFT'>   <TD>editdelete=6</TD>
+   <TD>editproperties=1</TD>
    <TD>editsimulationsets=1</TD>
    <TD>editundo=6</TD>
+</TR><TR ALIGN='LEFT'>   <TD>launchprogramfpga=10</TD>
    <TD>newproject=3</TD>
-</TR><TR ALIGN='LEFT'>   <TD>openproject=5</TD>
+   <TD>openhardwaremanager=1</TD>
+   <TD>openproject=5</TD>
+</TR><TR ALIGN='LEFT'>   <TD>openrecenttarget=1</TD>
+   <TD>programdevice=4</TD>
+   <TD>refreshdevice=1</TD>
    <TD>resetlayout=8</TD>
-   <TD>runbitgen=31</TD>
+</TR><TR ALIGN='LEFT'>   <TD>runbitgen=39</TD>
    <TD>runschematic=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>runsynthesis=1</TD>
+   <TD>runsynthesis=1</TD>
    <TD>savefileproxyhandler=17</TD>
-   <TD>setsourceenabled=1</TD>
+</TR><TR ALIGN='LEFT'>   <TD>setsourceenabled=1</TD>
    <TD>settopnode=26</TD>
-</TR><TR ALIGN='LEFT'>   <TD>showview=26</TD>
-   <TD>simulationrun=229</TD>
-   <TD>toggleselectareamode=1</TD>
+   <TD>showview=30</TD>
+   <TD>simulationrun=230</TD>
+</TR><TR ALIGN='LEFT'>   <TD>toggleselectareamode=1</TD>
    <TD>toggleviewnavigator=9</TD>
-</TR><TR ALIGN='LEFT'>   <TD>toolssettings=21</TD>
-   <TD>viewtaskrtlanalysis=3</TD>
+   <TD>toolssettings=21</TD>
+   <TD>viewtaskimplementation=1</TD>
+</TR><TR ALIGN='LEFT'>   <TD>viewtaskrtlanalysis=3</TD>
    <TD>waveformsaveconfiguration=5</TD>
    <TD>zoomfit=2</TD>
-</TR><TR ALIGN='LEFT'>   <TD>zoomin=1</TD>
+   <TD>zoomin=1</TD>
 </TR>  </TABLE>
 </TR><TR ALIGN='LEFT'>  <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>other_data</B></TD></TR>
-<TR ALIGN='LEFT'>   <TD>guimode=35</TD>
+<TR ALIGN='LEFT'>   <TD>guimode=38</TD>
 </TR>  </TABLE>
   <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>project_data</B></TD></TR>
@@ -197,7 +210,7 @@
    <TD>launch_simulation_questa=0</TD>
    <TD>launch_simulation_riviera=0</TD>
    <TD>launch_simulation_vcs=0</TD>
-</TR><TR ALIGN='LEFT'>   <TD>launch_simulation_xsim=225</TD>
+</TR><TR ALIGN='LEFT'>   <TD>launch_simulation_xsim=226</TD>
    <TD>simulator_language=VHDL</TD>
    <TD>srcsetcount=5</TD>
    <TD>synthesisstrategy=Vivado Synthesis Defaults</TD>
@@ -216,7 +229,7 @@
     <TD>carry4=8</TD>
     <TD>fdpe=4</TD>
     <TD>fdre=32</TD>
-</TR><TR ALIGN='LEFT'>    <TD>gnd=4</TD>
+</TR><TR ALIGN='LEFT'>    <TD>gnd=5</TD>
     <TD>ibuf=16</TD>
     <TD>ldce=20</TD>
     <TD>lut1=4</TD>
@@ -224,7 +237,7 @@
     <TD>lut3=8</TD>
     <TD>lut4=46</TD>
     <TD>lut6=19</TD>
-</TR><TR ALIGN='LEFT'>    <TD>obuf=6</TD>
+</TR><TR ALIGN='LEFT'>    <TD>obuf=22</TD>
     <TD>obuft=1</TD>
     <TD>vcc=4</TD>
 </TR>   </TABLE>
@@ -236,7 +249,7 @@
     <TD>carry4=8</TD>
     <TD>fdpe=4</TD>
     <TD>fdre=32</TD>
-</TR><TR ALIGN='LEFT'>    <TD>gnd=4</TD>
+</TR><TR ALIGN='LEFT'>    <TD>gnd=5</TD>
     <TD>ibuf=16</TD>
     <TD>ldce=20</TD>
     <TD>lut1=4</TD>
@@ -244,7 +257,7 @@
     <TD>lut3=8</TD>
     <TD>lut4=46</TD>
     <TD>lut6=19</TD>
-</TR><TR ALIGN='LEFT'>    <TD>obuf=6</TD>
+</TR><TR ALIGN='LEFT'>    <TD>obuf=22</TD>
     <TD>obuft=1</TD>
     <TD>vcc=4</TD>
 </TR>   </TABLE>
@@ -363,7 +376,7 @@
     <TD>bidir_output_enable=1.000000</TD>
 </TR><TR ALIGN='LEFT'>    <TD>board_layers=12to15 (12 to 15 Layers)</TD>
     <TD>board_selection=medium (10&quot;x10&quot;)</TD>
-    <TD>clocks=0.000606</TD>
+    <TD>clocks=0.000851</TD>
     <TD>confidence_level_clock_activity=Low</TD>
 </TR><TR ALIGN='LEFT'>    <TD>confidence_level_design_state=High</TD>
     <TD>confidence_level_device_models=High</TD>
@@ -372,20 +385,20 @@
 </TR><TR ALIGN='LEFT'>    <TD>confidence_level_overall=Low</TD>
     <TD>customer=TBD</TD>
     <TD>customer_class=TBD</TD>
-    <TD>devstatic=0.071707</TD>
+    <TD>devstatic=0.071713</TD>
 </TR><TR ALIGN='LEFT'>    <TD>die=xc7a35tcpg236-1</TD>
     <TD>dsp_output_toggle=12.500000</TD>
-    <TD>dynamic=0.002885</TD>
+    <TD>dynamic=0.005918</TD>
     <TD>effective_thetaja=5.0</TD>
 </TR><TR ALIGN='LEFT'>    <TD>enable_probability=0.990000</TD>
     <TD>family=artix7</TD>
     <TD>ff_toggle=12.500000</TD>
     <TD>flow_state=routed</TD>
 </TR><TR ALIGN='LEFT'>    <TD>heatsink=medium (Medium Profile)</TD>
-    <TD>i/o=0.001639</TD>
+    <TD>i/o=0.004417</TD>
     <TD>input_toggle=12.500000</TD>
     <TD>junction_temp=25.4 (C)</TD>
-</TR><TR ALIGN='LEFT'>    <TD>logic=0.000324</TD>
+</TR><TR ALIGN='LEFT'>    <TD>logic=0.000328</TD>
     <TD>mgtavcc_dynamic_current=0.000000</TD>
     <TD>mgtavcc_static_current=0.000000</TD>
     <TD>mgtavcc_total_current=0.000000</TD>
@@ -396,12 +409,12 @@
 </TR><TR ALIGN='LEFT'>    <TD>mgtavtt_voltage=1.200000</TD>
     <TD>netlist_net_matched=NA</TD>
     <TD>off-chip_power=0.000000</TD>
-    <TD>on-chip_power=0.074592</TD>
+    <TD>on-chip_power=0.077632</TD>
 </TR><TR ALIGN='LEFT'>    <TD>output_enable=1.000000</TD>
     <TD>output_load=5.000000</TD>
     <TD>output_toggle=12.500000</TD>
     <TD>package=cpg236</TD>
-</TR><TR ALIGN='LEFT'>    <TD>pct_clock_constrained=1.000000</TD>
+</TR><TR ALIGN='LEFT'>    <TD>pct_clock_constrained=0.000000</TD>
     <TD>pct_inputs_defined=6</TD>
     <TD>platform=nt64</TD>
     <TD>process=typical</TD>
@@ -410,7 +423,7 @@
     <TD>read_saif=False</TD>
     <TD>set/reset_probability=0.000000</TD>
 </TR><TR ALIGN='LEFT'>    <TD>signal_rate=False</TD>
-    <TD>signals=0.000316</TD>
+    <TD>signals=0.000322</TD>
     <TD>simulation_file=None</TD>
     <TD>speedgrade=-1</TD>
 </TR><TR ALIGN='LEFT'>    <TD>static_prob=False</TD>
@@ -427,21 +440,21 @@
     <TD>vccadc_static_current=0.020000</TD>
 </TR><TR ALIGN='LEFT'>    <TD>vccadc_total_current=0.020000</TD>
     <TD>vccadc_voltage=1.800000</TD>
-    <TD>vccaux_dynamic_current=0.000056</TD>
+    <TD>vccaux_dynamic_current=0.000157</TD>
     <TD>vccaux_io_dynamic_current=0.000000</TD>
 </TR><TR ALIGN='LEFT'>    <TD>vccaux_io_static_current=0.000000</TD>
     <TD>vccaux_io_total_current=0.000000</TD>
     <TD>vccaux_io_voltage=1.800000</TD>
     <TD>vccaux_static_current=0.012615</TD>
-</TR><TR ALIGN='LEFT'>    <TD>vccaux_total_current=0.012671</TD>
+</TR><TR ALIGN='LEFT'>    <TD>vccaux_total_current=0.012773</TD>
     <TD>vccaux_voltage=1.800000</TD>
     <TD>vccbram_dynamic_current=0.000000</TD>
-    <TD>vccbram_static_current=0.000161</TD>
-</TR><TR ALIGN='LEFT'>    <TD>vccbram_total_current=0.000161</TD>
+    <TD>vccbram_static_current=0.000162</TD>
+</TR><TR ALIGN='LEFT'>    <TD>vccbram_total_current=0.000162</TD>
     <TD>vccbram_voltage=1.000000</TD>
-    <TD>vccint_dynamic_current=0.001366</TD>
-    <TD>vccint_static_current=0.009539</TD>
-</TR><TR ALIGN='LEFT'>    <TD>vccint_total_current=0.010904</TD>
+    <TD>vccint_dynamic_current=0.001621</TD>
+    <TD>vccint_static_current=0.009544</TD>
+</TR><TR ALIGN='LEFT'>    <TD>vccint_total_current=0.011165</TD>
     <TD>vccint_voltage=1.000000</TD>
     <TD>vcco12_dynamic_current=0.000000</TD>
     <TD>vcco12_static_current=0.000000</TD>
@@ -463,9 +476,9 @@
     <TD>vcco25_static_current=0.000000</TD>
 </TR><TR ALIGN='LEFT'>    <TD>vcco25_total_current=0.000000</TD>
     <TD>vcco25_voltage=2.500000</TD>
-    <TD>vcco33_dynamic_current=0.000430</TD>
+    <TD>vcco33_dynamic_current=0.001216</TD>
     <TD>vcco33_static_current=0.001000</TD>
-</TR><TR ALIGN='LEFT'>    <TD>vcco33_total_current=0.001430</TD>
+</TR><TR ALIGN='LEFT'>    <TD>vcco33_total_current=0.002216</TD>
     <TD>vcco33_voltage=3.300000</TD>
     <TD>version=2019.2</TD>
 </TR>   </TABLE>
@@ -600,7 +613,7 @@
 </TR><TR ALIGN='LEFT'>    <TD>lut6_functional_category=LUT</TD>
     <TD>lut6_used=19</TD>
     <TD>obuf_functional_category=IO</TD>
-    <TD>obuf_used=6</TD>
+    <TD>obuf_used=22</TD>
 </TR><TR ALIGN='LEFT'>    <TD>obuft_functional_category=IO</TD>
     <TD>obuft_used=1</TD>
 </TR>   </TABLE>
@@ -653,13 +666,13 @@
     <TD>lut_as_shift_register_fixed=0</TD>
     <TD>lut_as_shift_register_used=0</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut_in_front_of_the_register_is_unused_fixed=0</TD>
-    <TD>lut_in_front_of_the_register_is_unused_used=18</TD>
-    <TD>lut_in_front_of_the_register_is_used_fixed=18</TD>
-    <TD>lut_in_front_of_the_register_is_used_used=6</TD>
-</TR><TR ALIGN='LEFT'>    <TD>register_driven_from_outside_the_slice_fixed=6</TD>
-    <TD>register_driven_from_outside_the_slice_used=24</TD>
-    <TD>register_driven_from_within_the_slice_fixed=24</TD>
-    <TD>register_driven_from_within_the_slice_used=32</TD>
+    <TD>lut_in_front_of_the_register_is_unused_used=17</TD>
+    <TD>lut_in_front_of_the_register_is_used_fixed=17</TD>
+    <TD>lut_in_front_of_the_register_is_used_used=8</TD>
+</TR><TR ALIGN='LEFT'>    <TD>register_driven_from_outside_the_slice_fixed=8</TD>
+    <TD>register_driven_from_outside_the_slice_used=25</TD>
+    <TD>register_driven_from_within_the_slice_fixed=25</TD>
+    <TD>register_driven_from_within_the_slice_used=31</TD>
 </TR><TR ALIGN='LEFT'>    <TD>slice_available=8150</TD>
     <TD>slice_fixed=0</TD>
     <TD>slice_registers_available=41600</TD>
@@ -669,9 +682,9 @@
     <TD>slice_used=33</TD>
     <TD>slice_util_percentage=0.40</TD>
 </TR><TR ALIGN='LEFT'>    <TD>slicel_fixed=0</TD>
-    <TD>slicel_used=25</TD>
+    <TD>slicel_used=26</TD>
     <TD>slicem_fixed=0</TD>
-    <TD>slicem_used=8</TD>
+    <TD>slicem_used=7</TD>
 </TR><TR ALIGN='LEFT'>    <TD>unique_control_sets_available=8150</TD>
     <TD>unique_control_sets_fixed=8150</TD>
     <TD>unique_control_sets_used=9</TD>
@@ -770,10 +783,10 @@
    <TR><TD>
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>usage</B></TD></TR>
-<TR ALIGN='LEFT'>    <TD>elapsed=00:00:48s</TD>
+<TR ALIGN='LEFT'>    <TD>elapsed=00:00:46s</TD>
     <TD>hls_ip=0</TD>
-    <TD>memory_gain=683.828MB</TD>
-    <TD>memory_peak=1014.055MB</TD>
+    <TD>memory_gain=684.176MB</TD>
+    <TD>memory_peak=1014.539MB</TD>
 </TR>   </TABLE>
    </TD></TR>
   </TABLE><BR>
